tests/bad_programs/type_errors/while_int.nc
int main() {
    while (123) {
    }
    return 0;
}
